[package]
name = "chrono_sphere"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    # Rendu mobile optimisé
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",

    # Audio léger
    "bevy_audio",
    "vorbis",

    # Input tactile
    "bevy_input",

    # UI basique
    "bevy_ui",
    "bevy_text",

    # Optimisations mobile
    "multi-threaded",
    "bevy_gltf",

    # Format d'image mobile
    "png",
    "jpeg",

    # Debug conditionnel
    "bevy_debug_stepping",
]}

[lib]
name = "chrono_sphere"
crate-type = ["cdylib"]

[[bin]]
name = "chrono_sphere"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Configuration Android spécifique
[package.metadata.android]
package = "com.chronosphere.game"
build_targets = ["armv7-linux-androideabi"]

permission = [
    { name = "android.permission.WAKE_LOCK" },
    { name = "android.permission.VIBRATE" },
]

orientation = "landscape"

[package.metadata.android.application]
label = "Chrono Sphere"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
target_sdk_version = 34
min_sdk_version = 23
compile_sdk_version = 34
